add thrifty to netmail

--- a/netmail/test/ramsg.htm
+++ b/netmail/test/ramsg.htm
@@ -4,7 +4,7 @@
 <table width="100%" align="center" border="1" cellspacing="0" cellpadding="10">
 
 <tr>
-<<logo>>
+<td colspan="3"><img src="http://eonsum.com/ege/thrifty.jpg" height="78" width="158"></td>
 </tr>
 
 <tr>
