--- a/netmail/test/rezmsg.htm
+++ b/netmail/test/rezmsg.htm
@@ -4,7 +4,8 @@
 
 <table align="center" width="80%" border="1" cellspacing="0" cellpadding="10">
 <tr>
-  <<rzlogo>>
+  <td align='center'><b>Thank you for reserving your vehicle with Dollar Rent-a-Car</b><br>
+  <img src="http://eonsum.com/ege/thrifty.jpg" height="78" width="158"></td>
 </tr>
 
 <tr style='background:#EEEEEE;'><td>
